src/objects/SalesObjects__c.object
<CustomObject>
    <fields>
        <fullName>AppointmentConfirmationDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AppointmentConfirmationDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppointmentDate__c</fullName>
        <label>AppointmentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AppointmentRemainderDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AppointmentRemainderDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SalesObject</relationshipLabel>
        <relationshipName>SalesObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneHRRemainderDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OneHRRemainderDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responce__c</fullName>
        <label>Responce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T4HRRemainderDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>T4HRRemainderDefault</label>
        <type>Checkbox</type>
    </fields>
    <label>SalesObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SalesObjects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>